[cs-ui] CSCheckbox - fixed width on Firefox

--- a/cs-ui-components/src/sass/components/_cs-checkbox.scss
+++ b/cs-ui-components/src/sass/components/_cs-checkbox.scss
@@ -7,6 +7,7 @@
 	.cs-checkbox-group {
 		display: inline-flex;
 		width: fit-content;
+		width: -moz-fit-content;
 
 		.cs-checkbox {
 			width: 1px;
